test/istio.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nginx.default.svc.cluster.local
            subset: v1
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: nginx
  namespace: default
spec:
  host: nginx.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        app: nginx
